<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textStyle="bold"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/button_new_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_activity"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView_welcome"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/button_new_activity"
        android:layout_alignLeft="@+id/button_new_activity"
        android:layout_alignStart="@+id/button_new_activity" />

    <Button
        android:id="@+id/button_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog"
        android:layout_alignBaseline="@+id/button_toast"
        android:layout_alignBottom="@+id/button_toast"
        android:layout_alignRight="@+id/button_new_activity"
        android:layout_alignEnd="@+id/button_new_activity" />

    <Button
        android:id="@+id/button_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/button_alert"
        android:layout_toRightOf="@+id/button_toast"
        android:layout_toEndOf="@+id/button_toast" />

</RelativeLayout>
